<?xml version="1.0"?>
<package format="2">
  <name>arrow_detection</name>
  <version>0.0.0</version>
  <description>The arrow_detection package</description>

  <maintainer email="dedipya@todo.todo">dedipya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>opencv</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!-- Document PyTorch dependency -->
  <doc_depend>torch</doc_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
